[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/spaceStation_017.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/spaceStation_024.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/spaceStation_029.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/spaceStation_028.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/BaseEnemiga.gd" type="Script" id=5]
[ext_resource path="res://Juego/Test/AreaColision.gd" type="Script" id=6]
[ext_resource path="res://Juego/Naves/NavesEnemigas/EnemigoOrbital/EnemigoOrbital.tscn" type="PackedScene" id=7]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga/PosicionesSpawn.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=5]
radius = 64.0
height = 352.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 19.0
height = 304.0

[sub_resource type="Animation" id=3]
resource_name = "rotacion_antihorario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "rotacion_pendulo"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -90.0, 90.0, -90.0 ]
}

[node name="BaseEnemiga" type="Node2D"]
z_index = 45
z_as_relative = false
script = ExtResource( 5 )
orbital = ExtResource( 7 )

[node name="Sprites" type="Node2D" parent="."]

[node name="SpaceStation1" type="Sprite" parent="Sprites"]
position = Vector2( -4, 65 )
texture = ExtResource( 2 )

[node name="SpaceStation2" type="Sprite" parent="Sprites"]
position = Vector2( 173, -33 )
rotation = -3.14159
texture = ExtResource( 1 )

[node name="SpaceStation3" type="Sprite" parent="Sprites"]
position = Vector2( 0, -200 )
texture = ExtResource( 4 )

[node name="SpaceStation4" type="Sprite" parent="Sprites"]
position = Vector2( 0, -153 )
texture = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 9
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, 13 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 38, -33 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="AreaAtraccion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtraccion"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotacion_antihorario = SubResource( 3 )
anims/rotacion_horario = SubResource( 4 )
anims/rotacion_pendulo = SubResource( 8 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="PosicionesSpawn" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Norte" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, -322 )

[node name="Este" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 383, -33 )

[node name="Sur" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( 0, 354 )

[node name="Oeste" type="Position2D" parent="PosicionesSpawn"]
position = Vector2( -318, -33 )

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
